--- a/ui/index.html
+++ b/ui/index.html
@@ -8,6 +8,8 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
+        <h2>Welcome</h2>
+        <br>
         <div class="center text-big bold">
             Hi! I am Gyan. This is my webapp.
         </div>
