--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <h1 align=center>Welcome</h1>
+        <div class="head">Welcome</div>
         <br>
         <div class="center text-big bold">
             Hi! I am Gyan. This is my webapp.
