[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,21 @@
 <html>
+    <head>
+        <title>
+            Article One | Gyaniswar Hajong
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href = "/">Home</a>
+            <hr>
+        </div>
+        <div>
+            <h2>
+                Article One
+            </h2>
+        </div>
+        <p>
+            Hello.This is my article one.There is nothing much to say about it but it is getting fun.
+        </p>
+    </body>
 </html>
