[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,8 +4,20 @@
             Article Two | Gyaniswar Hajong
         </title>
         <meta name = "viewport" content = "width-device-width, initial-scale=1"/>
+        <style>
+            .container {
+                max-width: 800px;
+                margin: 0 auto;
+                color: rgb(127,230,158);
+                font-family: sans-serif;
+                padding-top: 70px;
+                padding-left:50px;
+                padding-right: 50px;
+            }
+        </style>
     </head>
     <body>
+        <div class = "container">
         <div>
             <a href = "/">Home</a>
             <hr>
@@ -18,5 +30,6 @@
         <p>
             Hello.This is my article two.There is nothing much to say about it but it is getting fun.
         </p>
+        </div>
     </body>
 </html>
