--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,17 +4,7 @@
             Article One | Gyaniswar Hajong
         </title>
         <meta name = "viewport" content = "width-device-width, initial-scale=1"/>
-        <style>
-            .container {
-                max-width: 800px;
-                margin: 0 auto;
-                color: rgb(127,230,158);
-                font-family: sans-serif;
-                padding-top: 70px;
-                padding-left:50px;
-                padding-right: 50px;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class = "container">
