[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -17,6 +17,9 @@
                 Article One
             </h2>
         </div>
+        <div>
+            August 4th 2017
+        </div>
         <p>
             Hello.This is my article one.There is nothing much to say about it but it is getting fun.
         </p>
