--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,6 +8,9 @@
     </head>
     <body>
         <div class = "container">
+            <div class="center">
+                <img src="/ui/madi.png" class="img-medium"/>
+            </div>
         <div>
             <a href = "/">Home</a>
             <hr>
