--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,10 @@
         <div class="center text-big bold">
             Hi! I am Gyan. This is my webapp.
         </div>
+        <script>
+            alert("Hi I'm a beginner")
+        </script>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
