[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
             Hi! I am Gyan. This is my webapp.
         </div>
         <script>
-            alert("Hi I'm a beginner")
+            alert("Hi I'm a beginner");
         </script>
         
         <script type="text/javascript" src="/ui/main.js">
