[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="head">Welcome</div>
+        <div id = "te" class="head">Welcome</div>
         <br>
         <div class="center text-big bold">
             Hi! I am Gyan. This is my webapp.
