--- a/ui/index.html
+++ b/ui/index.html
@@ -4,8 +4,9 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class = "container">
         <div class="center">
-            <img id = "madi" src="/ui/madi.png" class="img-medium"/>
+            <img id = "madi" src="https://plus.google.com/u/0/photos/108738417836987178857/albums/profile/6173395750657271250" class="img-medium"/>
         </div>
         <br>
         <div id = "te" class="head">Welcome</div>
@@ -13,9 +14,7 @@
         <div class="center text-big bold">
             Hi! I am Gyan. This is my webapp.
         </div>
-        <script>
-            alert("Hi I'm a beginner");
-        </script>
+        </div>
         
         <script type="text/javascript" src="/ui/main.js">
         </script>
