--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class = "container">
         <div class="center">
-            <img id = "madi" src="https://plus.google.com/u/0/photos/108738417836987178857/albums/profile/6173395750657271250" class="img-medium"/>
+            <img id = "madi" src="https://lh3.googleusercontent.com/-zrkuDQ4wpmc/AAAAAAAAAAI/AAAAAAAAE5U/VjzzW6sqSu4/s60-p-rw-no/photo.jpg" class="img-medium"/>
         </div>
         <br>
         <div id = "te" class="head">Welcome</div>
