[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,17 @@
         <div id = "te" class="head">Welcome</div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Gyan. This is my webapp.
+            This is my webapp.
+        </div>
+        <br>
+        <h3>Personal</h3>
+        <div>
+            Hi I'm Gyan
+        </div>
+        <hr>
+        <h3>Professional</h3>
+        <div>
+            I'm a student.
         </div>
         </div>
         
