[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,6 +24,11 @@
         <div>
             I'm a student.
         </div>
+        <hr>
+        <hr>
+        <div class = "footer">
+            This buttom <button id = "counter">Click me</button> has been clicked <span id = "count">0</span> times.
+        </div>
         </div>
         
         <script type="text/javascript" src="/ui/main.js">
