--- a/ui/index.html
+++ b/ui/index.html
@@ -29,6 +29,14 @@
         <div class = "footer">
             This buttom <button id = "counter">Click me</button> has been clicked <span id = "count">0</span> times.
         </div>
+        <br>
+        <input type = "text" placeholder = "name">
+        <input type = "submit" value = "Submit">
+        <ul>
+            <li>name1</li>
+            <li>name2</li>
+            <li>name3</li>
+        </ul>
         </div>
         
         <script type="text/javascript" src="/ui/main.js">
