--- a/ui/index.html
+++ b/ui/index.html
@@ -31,7 +31,7 @@
         </div>
         <br>
         <hr>
-        <input type = "text" placeholder = "name"></input>
+        <input type = "text" placeholder = "name" id = "name"></input>
         <input type = "submit" value = "Submit" id = "submit_btn">
         <ul id = "namelist">
         </ul>
