[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -38,6 +38,8 @@
         <br>
         <hr>
         <hr>
+        <h3>Comments:</h3>
+        <br>
         <textarea name = "comment"  id = "comment" cols = "100" rows = "5"></textarea>
         <input type = "submit" value = "Post" id = "post_btn"></input>
         <br>
